Serialize card captchas within extra data